Fix horizontal scroll issue of mobile phones

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 html {
     font-size: 100%;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
+    position: relative;
     margin: 0;
     padding: 0;
     font-family: Montserrat;
